--- a/360FloatWindowDemo/app/src/main/res/layout/activity_main.xml
+++ b/360FloatWindowDemo/app/src/main/res/layout/activity_main.xml
@@ -37,18 +37,19 @@
 旨在帮助每一位幼年照相机平滑成长\n
 更新计划:优化控件耦合，提高运行速度\n
 根据过场动画判断点位\n
-约瑟夫导航 地窖点 线程拆分\n
-地图-永眠镇 冰工厂数据导入\n
+约瑟夫导航√ 地窖点√ 线程拆分\n
+地图-永眠镇 冰工厂唐人街数据导入√\n
 使用说明:
 \n安全措施很烂，日志也懒得搞，敢乱点就敢崩溃\n
 出什么问题概不负责
 \n人类玩家:\n
 组排适用，选择2个或3个出生点,点击[人]即可推理屠夫位置并显示地图\n
 \n屠夫玩家\n选择你的出生点并点击[屠]\n
-Bug反馈:github.com/iopav/funes_ 项目里提交request
-\n或者直接截图告诉我
+Bug反馈:github.com/iopav/funes_
+\n或者群里艾特我713439463
 \n制作：我  测试：你
-\n©iopav flyingfishes(感谢ff老师提供框架)\n
+\n©iopav @flyingfishes(感谢ff老师提供框架)\n
+感谢b站@芝士晨阳来了,@盒饭R第五人格,@冈易提供地图素材\n
 彩蛋:标题颜色的十六进制\n
 点击↓开始
 "
